--- a/lib/private/404/css/style.css
+++ b/lib/private/404/css/style.css
@@ -159,7 +159,7 @@ button:hover {
 
 /*--//wrapper--*/
 .yu-error {
-  background: url(https://lovablewyh.zinet.top/static/lovablewyh-library/404/images/background.jpg) no-repeat bottom;
+  background: url(https://static.nuoyis.com/lib/private/404/images/background.jpg) no-repeat bottom;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
