--- a/lib/blog/typecho/themes/butterfly/static/webfont/ziti.css
+++ b/lib/blog/typecho/themes/butterfly/static/webfont/ziti.css
@@ -15,9 +15,9 @@
 }
 
 body{
-font-family: "zhanku"!improtant;
+font-family: zhanku!improtant;
 }
 
 .site-name{
-font-family: "YingHuaYuLuo"!improtant;
+font-family: zhanku,YingHuaYuLuo!improtant;
 }
